[tool.poetry]
name = "kaggle-extract"
version = "0.1.0"
description = ""
authors = ["levyvix <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
duckdb = "^0.10.0"
kaggle = "^1.6.6"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
