[tool.poetry]
name = "kaggle-extract"
version = "0.1.0"
description = ""
authors = ["levyvix <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
kaggle = "^1.6.6"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
black = "^24.2.0"
polars = "^0.20.14"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
ipykernel = "^6.29.3"
folium = "^0.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
